--- a/Dockerfile.build
+++ b/Dockerfile.build
@@ -2,20 +2,19 @@ FROM rust:latest
 
 # Install cross-compilation tools with all dependencies
 RUN apt-get update && apt-get install -y \
-    gcc-arm-linux-gnueabihf \
-    g++-arm-linux-gnueabihf \
-    libc6-dev-armhf-cross \
-    binutils-arm-linux-gnueabihf \
+    gcc-aarch64-linux-gnu \
+    g++-aarch64-linux-gnu \
+    libc6-dev-arm64-cross \
+    binutils-aarch64-linux-gnu \
     lld \
     && rm -rf /var/lib/apt/lists/*
 
 # Add Raspberry Pi targets
-RUN rustup target add arm-unknown-linux-gnueabihf
-RUN rustup target add armv7-unknown-linux-gnueabihf
+RUN rustup target add aarch64-unknown-linux-gnu
 
 # Create .cargo/config.toml with cross-compilation settings
 RUN mkdir -p /usr/local/cargo/config.toml.d
-RUN echo '[target.arm-unknown-linux-gnueabihf]\nlinker = "arm-linux-gnueabihf-gcc"\n' > /usr/local/cargo/config
+RUN echo '[target.aarch64-unknown-linux-gnu]\nlinker = "aarch64-linux-gnu-gcc"\n' > /usr/local/cargo/config
 
 # Set up working directory
 WORKDIR /app
